--- a/src/pathfindingVisualizer/pathfindingVisualizer.css
+++ b/src/pathfindingVisualizer/pathfindingVisualizer.css
@@ -1,3 +1,10 @@
 .grid {
-    margin: 100px 0 0;
+    margin: 45px 0 0;
+  }
+
+  .center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
   }
