--- a/src/pathfindingVisualizer/pathfindingVisualizer.css
+++ b/src/pathfindingVisualizer/pathfindingVisualizer.css
@@ -14,6 +14,14 @@ button {
   padding: 25px 5px 15px 0;
 }
 
+#programButtons .btn{
+  margin-bottom: 5px;
+}
+
+#programButtons .dropbtn{
+  margin-bottom: 5px;
+}
+
 #algoDescription{
   text-align: center;
   color: #334444;
@@ -111,7 +119,7 @@ li {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.5;
   border-radius: .25rem;
-  margin: 0;
+
   vertical-align: middle;
 }
 
